<resources>
    <string name="app_name">SkinSync</string>
    <string name="desc_title">Skincare Recommendation Based on Facial Skin Condition</string>
    <string name="input_username">Masukkan Nama Anda</string>
    <string name="input_email">Masukkan Email Anda</string>
    <string name="input_password">Masukkan Password Anda</string>
    <string name="input_confirm">Konfirmasi Password Anda</string>
    <string name="button_register">Daftar</string>
    <string name="button_login">Masuk</string>
    <string name="checkbox_remember">Ingat password</string>
    <string name="forgot_password">Lupa Password ?</string>
    <string name="dont_have_account">Tidak memiliki Akun ?</string>
    <string name="make_account">Buat Akun</string>
    <string name="welcome">Selamat datang di SkinSync !</string>
    <string name="welcome_desc">Deteksi kulit wajah Anda dan dapatkan solusi perawatan terbaik untuk kulit yang sehat ? di SkinSync aja!</string>
    <string name="dashboard">Dashboard</string>
    <string name="title_page_profile">Profile</string>
    <string name="username_profile">Username</string>
    <string name="age_title">Age</string>
    <string name="data_null_profile">-----</string>
    <string name="birth_date">Birth Date</string>
    <string name="pick_date">Pick date</string>
    <string name="age_desc">21 years old</string>
    <string name="gender_title">Gender</string>
    <string name="gender_male">Male</string>
    <string name="email_title">Gmail</string>
    <string name="email_desc">email@gmail.com</string>
    <string name="password_title">Password</string>
    <string name="password_desc">*********</string>
    <string name="button_edit_profile">Edit Profile</string>
    <string name="title_page_edit_profile">Edit Profile</string>
    <string name="upload_image">Upload Image</string>
    <string name="input_age">Masukkan Usia Anda</string>
    <string name="gender_female">Female</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_page_scan">Know your Facial Skin Type</string>
    <string name="button_camera">Camera</string>
    <string name="button_gallery">Gallery</string>
    <string name="button_upload">Upload</string>
    <string name="title_page_result">Here\'s your result</string>
    <string name="title_skin_type">Tipe Kulit Wajahmu:</string>
    <string name="type_skin">Normal</string>
    <string name="title_reminder_result">Reminder !</string>
    <string name="message_reminder">Jangan lupa untuk menggunakan skincare secara rutin.</string>
    <string name="title_recommend_skincare">Rekomendasi Skincare</string>
    <string name="message_result">Berdasarkan tipe kulitmu, SkinSync merekomendasikan Skincare dibawah ini untuk digunakan secara rutin agar mendapatkan hasil perawatan kulit wajah terbaik.</string>
    <string name="button_get_product">Dapatkan disini !</string>
    <string name="title_scheduling_skincare">Scheduling Skincare</string>
    <string name="desc_scheduling_result">Coba fitur Scheduling untuk mendapatkan hasil perawatan terbaik.</string>
    <string name="button_try_now">Coba Sekarang !</string>
    <string name="title_page_scheduling">Scheduling Skincare Routine</string>
    <string name="text_view_date">Saturday, May 24th</string>
    <string name="title_morning_routine">Morning Routine</string>
    <string name="title_night_routine">Night Routine</string>
    <string name="many_step">5 Steps</string>
    <string name="completed_routine_morn">Morning Routine Completed ?</string>
    <string name="completed_routine_night">Night Routine Completed ?</string>
    <string name="input_product">Input Product</string>
    <string name="see_details">See Details</string>
    <string name="title_page_list_product">List of Product</string>
    <string name="title_skincare_product">Skincare Products</string>
    <string name="title_stored_product">Stored Product</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_welcome_main">Welcome, User !</string>
    <string name="title_main_fitur">Ketahui Tipe Kulit Wajahmu</string>
    <string name="desc_main_fitur">dan dapatkan rekomendasi skincare yang cocok untukmu.</string>
    <string name="step_fitur">Langkah penggunaan:</string>
    <string name="step_1">Scan wajah dengan kamera</string>
    <string name="step_2">Ambil gambar dari galeri</string>
    <string name="step_3">Upload gambar</string>
    <string name="step_4">Dapatkan hasil tipe kulitmu dan SkinSync akan merekomendasikan produk skincare untukmu</string>
    <string name="tunggu_apalagi">Tunggu apalagi ? </string>
    <string name="title_article_page">Article</string>
    <string name="welcome_back">Welcome back, </string>
    <string name="just_for_u">Just For You</string>
    <string name="see_more">See More</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="no_prediction">No prediction available</string>

    <integer-array name="data_photo_product">
        <item>@drawable/facewash_oily</item>
        <item>@drawable/toner_oily</item>
        <item>@drawable/sunscreen_oily</item>
        <item>@drawable/serum_oily</item>
        <item>@drawable/mosturizer_oily</item>
        <item>@drawable/normal_serum</item>
        <item>@drawable/normal_toner</item>
        <item>@drawable/normal_sunscreen</item>
        <item>@drawable/normal_facewash</item>
        <item>@drawable/normal_moisturizer</item>
    </integer-array>

    <string-array name="data_type_product">
        <item>Face Wash - Oily Skin Type</item>
        <item>Toner - Oily Skin Type</item>
        <item>Sunscreen - Oily Skin Type</item>
        <item>Serum - Oily Skin Type</item>
        <item>Moisturizer - Oily Skin Type</item>
        <item>Serum - Normal Skin Type</item>
        <item>Toner - Normal Skin Type</item>
        <item>Sunscreen - Normal Skin Type</item>
        <item>Face Wash - Normal Skin Type</item>
        <item>Moisturizer - Normal Skin Type</item>
    </string-array>

    <string-array name="data_name_product">
        <item>ACWELL Bubble Free PH Balancing Cleanser</item>
        <item>ACWELL Aquaseal Soothing Tonic</item>
        <item>AVOSKIN The Great Shield SPF 50 PA++++</item>
        <item>AHC Peony Bright Luminous Serum</item>
        <item>AIZEN Whitifique Face Cream</item>
        <item>AZARINE C white lightening serum</item>
        <item>AIZEN Incredipeel Exfoliating + Purifying Facial Toner</item>
        <item>BANANA BOAT Protective Tanning Oil SPF8</item>
        <item>Brightening Facial Cleanser</item>
        <item>Azarine C White Ultralight Hydraglow Day Cream</item>
    </string-array>
</resources>