<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.users.profile.edit.EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/titlePage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:text="@string/title_page_edit_profile"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/uploadImage"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginStart="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:scaleType="centerCrop"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titlePage"
        android:src="@drawable/baseline_account_circle_24"/>

    <TextView
        android:id="@+id/uploadImageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:fontFamily="@font/lato_bold"
        android:background="@drawable/ripple_effect"
        android:text="@string/upload_image"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/grey"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/uploadImage"
        app:layout_constraintTop_toBottomOf="@+id/titlePage" />

    <TextView
        android:id="@+id/usernameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_24sdp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/username_profile"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameProfile">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/peach"
            android:textColorHint="@color/peach"
            android:hint="@string/input_username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/birthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/birth_date"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/usernameEditTextLayout"
        app:layout_constraintStart_toStartOf="@+id/usernameEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTextLayout" />

        <Button
            android:id="@+id/pickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/pick_date"
            app:layout_constraintStart_toStartOf="@id/birthDate"
            app:layout_constraintTop_toBottomOf="@+id/birthDate" />

    <TextView
        android:id="@+id/genderTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/gender_title"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/pickDate"
        app:layout_constraintStart_toStartOf="@+id/pickDate"
        app:layout_constraintTop_toBottomOf="@+id/pickDate"/>


        <RadioGroup
            android:id="@+id/genderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toRightOf="@+id/genderTitle"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/genderTitle"
            app:layout_constraintTop_toBottomOf="@+id/genderTitle">

            <RadioButton
                android:id="@+id/checkBoxMale"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_36sdp"
                android:backgroundTint="@color/peach"
                android:fontFamily="@font/roboto"
                android:text="@string/gender_male"
                android:textColor="@color/peach"
                android:textSize="@dimen/_12ssp"/>

            <RadioButton
                android:id="@+id/checkBoxFemale"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_36sdp"
                android:backgroundTint="@color/peach"
                android:fontFamily="@font/roboto"
                android:text="@string/gender_female"
                android:textColor="@color/peach"
                android:textSize="@dimen/_12ssp"/>
        </RadioGroup>

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/email_title"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/usernameProfile"
        app:layout_constraintTop_toBottomOf="@+id/genderRadioGroup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/peach"
            android:textColorHint="@color/peach"
            android:hint="@string/input_email"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/password_title"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/usernameProfile"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/peach"
            android:textColorHint="@color/peach"
            android:hint="@string/input_password"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginStart="-130dp"
            android:background="@drawable/button_peach"
            android:fontFamily="@font/roboto"
            android:text="@string/button_save"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/button_peach"
            android:fontFamily="@font/roboto"
            android:text="@string/button_cancel"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonSave"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout" />

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@drawable/back"
            android:layout_marginTop="@dimen/_30sdp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@id/usernameProfile"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@+id/buttonSave"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>